.gitops/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: console
    app: console
    version: "0.0.1"
  name: console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: console
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: console
        app: console
        version: "0.0.1"
    spec:
      serviceAccountName: ultrasearch-app
      automountServiceAccountToken: false
      containers:
        - args:
            - sleep
            - "10000000"
          image: pdbaines83/ultrasearch:0.0.1
          name: console
          resources: {}
      restartPolicy: Always
status: {}
