.gitops/fetch-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: fetch-worker
    app: fetch-worker
    version: "0.0.1"
  name: fetch-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fetch-worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: fetch-worker
        app: fetch-worker
        version: "0.0.1"
    spec:
      serviceAccountName: ultrasearch-app
      automountServiceAccountToken: false
      containers:
        - args:
            - celery
            - -A
            - ingest.tasks
            - worker
            - --queues
            - fetch,parse,celery
            - -l
            - info
          image: pdbaines83/ultrasearch:0.0.1
          name: fetch-worker
          resources: {}
      restartPolicy: Always
status: {}
