.gitops/upload-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: upload-worker
  name: upload-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: upload-worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: upload-worker
    spec:
      serviceAccountName: ultrasearch-app
      automountServiceAccountToken: false
      containers:
        - args:
            - celery
            - -A
            - ingest.tasks
            - worker
            - --queues
            - upload
            - -l
            - info
          image: pdbaines83/ultrasearch:0.0.1
          name: upload-worker
          resources: {}
      restartPolicy: Always
status: {}
