.gitops/flower-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: flower-ui
  name: flower-ui
spec:
  ports:
    - name: "5555"
      port: 5555
      targetPort: 5555
  selector:
    io.kompose.service: flower-ui
status:
  loadBalancer: {}
