.gitops/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
    app: rabbitmq
    version: "0.0.1"
  name: rabbitmq
spec:
  ports:
    - name: "tcp-5672"
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: "tcp-15672"
      protocol: TCP
      port: 15672
      targetPort: 15672
  selector:
    io.kompose.service: rabbitmq
status:
  loadBalancer: {}
