.gitops/flower-ui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flower-ui
  labels:
    app: flower-ui
    version: "0.0.1"
spec:
  hosts:
  - "*"
  gateways:
  - flower-ui-gateway
  http:
  - match:
    - uri:
        prefix: "/flower/"
    - uri:
        exact: "/flower"
    route:
    - destination:
        host: flower-ui.ultrasearch.svc.cluster.local
        port:
          number: 5555
